--- a/public/created-room.html
+++ b/public/created-room.html
@@ -12,10 +12,11 @@
     <link rel="stylesheet" href="./css/header.css">
     <script src="./JavaScript/auth-guard.js"></script>
     <script src="./JavaScript/edit-room-page.js" defer></script>
-    <script src="./JavaScript/filter.js" defer></script>
+    <script src="./JavaScript/filter.js" type="module" defer></script>
     <script src="./JavaScript/sidebar.js" defer></script>
     <script src="./JavaScript/header.js" defer></script>
     <script src="./JavaScript/global-loader.js" defer></script>
+    <script src="./JavaScript/created-room-loader.js" type="module" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600;700&family=Inria+Sans&display=swap"
