Add content to room detail page for enhanced user experience

--- a/public/room-detail-page.html
+++ b/public/room-detail-page.html
@@ -95,6 +95,24 @@
             </div>
         </form>
 
+มาร์ชชึ
+ถ่ายทอดสด
+Pukub.p
+
+
+ถ่ายทอดสด
+มาร์ชชึ
+
+ 
+Pukub.p
+
+ 
+มาร์ชชึ
+
+คิดสูตรของเตี่ย
+ 
+หน้าจอของ มาร์ชชึ
+
         <section class="action-buttons-container" id="action-buttons-container">
             <!-- State 1 -->
             <div class="btn-box" id="join-box">
