Enhance room detail page with check-in functionality and event start logic

--- a/public/room-detail-page.html
+++ b/public/room-detail-page.html
@@ -94,7 +94,7 @@
                 <ul class="member-list" id="detail-room-member-list"></ul>
             </div>
         </form>
-        
+
         <section class="action-buttons-container" id="action-buttons-container">
             <!-- State 1 -->
             <div class="btn-box" id="join-box">
@@ -104,7 +104,7 @@
                     <!-- ผู้เข้าร่วม(เต็ม) -->
                     <div class="full-room-message" id="full-room-message">
                         <span class="material-symbols-outlined">block</span>
-                        <span>กิจกรรมเต็มแล้ว</span>
+                        <span id="full-room-text">กิจกรรมเต็มแล้ว</span>
                     </div>
                 </div>
                 <!-- เจ้าของห้อง --><button class="btn a-btn" id="manage-check-in-btn">การเช็คชื่อ</button>
