--- a/public/history-page.html
+++ b/public/history-page.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="./css/header.css">
     <script src="./JavaScript/auth-guard.js"></script>
     <script src="./JavaScript/edit-room-page.js"></script>
-    <script src="./JavaScript/filter.js" defer></script>
+    <script type="module" src="./JavaScript/history-room-loader.js" defer></script>
+    <script type="module" src="./JavaScript/filter.js" defer></script>
     <script src="./JavaScript/sidebar.js" defer></script>
     <script src="./JavaScript/header.js" defer></script>
     <script src="./JavaScript/global-loader.js" defer></script>
