Refactor room message handling in room detail page and improve check-in logic

--- a/public/room-detail-page.html
+++ b/public/room-detail-page.html
@@ -102,9 +102,9 @@
                     <!-- ผู้เข้าร่วม(เริ่มต้น) --><button class="btn" id="join-room-btn">เข้าร่วมกิจกรรม</button>
                     <!-- ผู้เข้าร่วม(หลังกดเข้าร่วม) --><button class="btn" id="leave-room-btn">ยกเลิกเข้าร่วม</button>
                     <!-- ผู้เข้าร่วม(เต็ม) -->
-                    <div class="full-room-message" id="full-room-message">
+                    <div class="full-room-message" id="room-message">
                         <span class="material-symbols-outlined">block</span>
-                        <span id="full-room-text">กิจกรรมเต็มแล้ว</span>
+                        <span id="room-text-message">ข้อความเตือน</span>
                     </div>
                 </div>
                 <!-- เจ้าของห้อง --><button class="btn a-btn" id="manage-check-in-btn">การเช็คชื่อ</button>
