Add leader credit score to room details and update rendering logic

--- a/public/room-detail-page.html
+++ b/public/room-detail-page.html
@@ -84,7 +84,7 @@
                         <span id="detail-leader-name">Leader</span>
                     </div>
                     <div class="creditperson">
-                        <span>100</span>
+                        <span id="detail-leader-credit">0</span>
                         <img src=".\Resource\img\credit.png" alt="credit-image">
                     </div>
                 </div>
