--- a/public/edit-room-page.html
+++ b/public/edit-room-page.html
@@ -99,7 +99,7 @@
                 </div>
                 <ul class="tag-list-item" id="tag-list-display"></ul>
                 <input type="hidden" name="tags" id="tags-list-hidden" value="" required>
-                <p class="tag-helper-text">เลือกจากแท็กที่มีให้ หรือพิมพ์แท็กใหม่ (สูงสุด 5 อัน)</p>
+                <p class="tag-helper-text">เลือกจากแท็กที่มีให้ หรือพิมพ์แท็กใหม่ (สูงสุด 5 อัน) ลำดับของ Tag มีผลต่อการเรียงลำดับกิจกรรมแนะนำในหน้าแรก</p>
             </div>
 
             <div class="form-group">
