delete old detailed in detail room

--- a/public/room-detail-page.html
+++ b/public/room-detail-page.html
@@ -42,33 +42,33 @@
 
             <div class="form-group">
                 <strong>ไอดี</strong>
-                <span id="detail-room-id">00</span>
+                <span id="detail-room-id"></span>
             </div>
 
             <div class="form-group">
                 <strong>ชื่อกิจกรรม</strong>
-                <span id="detail-room-title">อ่านแคลกันครับพวกลิง</span>
+                <span id="detail-room-title"></span>
             </div>
 
             <div class="form-group">
                 <strong>ชื่อสถานที่</strong>
-                <span id="detail-room-location" class="address-activity">N10</span>
+                <span id="detail-room-location" class="address-activity"></span>
             </div>
 
             <div class="form-group">
                 <strong>เวลา</strong>
-                <span id="detail-room-time">00:00 - 00:00 น.</span>
+                <span id="detail-room-time"></span>
             </div>
 
             <div class="form-group">
                 <strong>วัน / เดือน / ปี</strong>
-                <span id="detail-room-date">0 / 00 / 0000</span>
+                <span id="detail-room-date"></span>
             </div>
 
             <div class="form-group">
                 <strong>รายละเอียด</strong>
                 <textarea title="รายละเอียดกิจกรรม" readonly id="detail-room-desc" name="room-detail"
-                    class="detail-textarea">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam, quia. Labore aliquid provident ut eaque commodi minus, quaerat sequi fuga sapiente magnam ex possimus quod error totam saepe et vitae accusamus non laboriosam obcaecati perspiciatis est? Accusantium fuga blanditiis eveniet provident quidem? Quod, at! Aspernatur iusto enim voluptatibus assumenda accusantium!</textarea>
+                    class="detail-textarea"></textarea>
             </div>
 
             <div class="form-group">
@@ -81,10 +81,10 @@
                 <div class="member-room-box" id="detail-leader-info">
                     <div class="profile-member">
                         <img src=".\Resource\img\profile.png" alt="profile-image" id="detail-leader-img">
-                        <span id="detail-leader-name">Leader</span>
+                        <span id="detail-leader-name"></span>
                     </div>
                     <div class="creditperson">
-                        <span id="detail-leader-credit">0</span>
+                        <span id="detail-leader-credit"></span>
                         <img src=".\Resource\img\credit.png" alt="credit-image">
                     </div>
                 </div>
