Refactor SQL insert statement for better readability in user registration

--- a/public/home-page.html
+++ b/public/home-page.html
@@ -59,8 +59,7 @@
         <ul class="sidebar-links">
             <!-- Global -->
             <li class="active-page"><a href="./home-page.html"><span
-                        class="material-symbols-outlined">home</span><span>หน้าแรก</span></a>
-            </li>
+                        class="material-symbols-outlined">home</span><span>หน้าแรก</span></a></li>
             <!-- Member -->
             <li><a href="./my-account-page.html" class="member-only"><span
                         class="material-symbols-outlined">person</span><span>โปรไฟล์ของฉัน</span></a></li>
